TFP-3222 delvis tilrettelegging kan ha null stillingsprosent hvis ikke i bruk (#435)